feat: refactoring core models, services and repository and fixed command executors and listeners